--- a/post_processing/motion_processing.ipynb
+++ b/post_processing/motion_processing.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os, fnmatch\n",
     "import numpy as np\n",
+    "from scipy.stats import iqr\n",
+    "from numpy import percentile\n",
     "\n",
     "def locate(pattern, root=os.curdir):\n",
     "    '''Locate all files matching supplied filename pattern in and below\n",
@@ -145,12 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "use_derivs = True\n",
-    "use_quads = False"
+    "use_quads = False\n",
+    "dvar_reg = True\n",
+    "displace_reg = True"
    ]
   },
   {
@@ -164,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,29 +186,102 @@
     "if use_quads == True:\n",
     "    quads_df = confounds_motion_all.apply(np.square)\n",
     "    quads_df.columns = [s + '_sq' for s in quads_df.columns]\n",
-    "    confounds_motion_all = pd.concat([confounds_motion_all, quads_df], axis=1)"
+    "    confounds_motion_all = pd.concat([confounds_motion_all, quads_df], axis=1)\n",
+    "\n",
+    "#Compute some more columns for the confounds df\n",
+    "#from https://fsl.fmrib.ox.ac.uk/fsl/fslwiki/FSLMotionOutliers:\n",
+    "#--thresh=<val>       specify absolute threshold value (otherwise use box-plot cutoff = P75 + 1.5*IQR)\n",
+    "\n",
+    "spikes=pd.Series([0]*confounds_spikereg.shape[0])\n",
+    "\n",
+    "if dvar_reg == False and displace_reg == False:\n",
+    "    raise Exception('Must include at least one spike regressor option.')\n",
+    "\n",
+    "if dvar_reg == True:\n",
+    "    dvar_outlier_boundry = percentile(confounds_spikereg.loc[1:, 'dvars'], q = [75]) + 1.5*iqr(confounds_spikereg.loc[1:, 'dvars'])\n",
+    "    spikes = spikes + confounds_spikereg['dvars'].apply(lambda dvar: 1 if dvar > dvar_outlier_boundry else 0)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['csf', 'white_matter', 'global_signal', 'trans_x', 'trans_y', 'trans_z',\n",
-       "       'rot_x', 'rot_y', 'rot_z'],\n",
-       "      dtype='object')"
+       "0      0\n",
+       "1      0\n",
+       "2      0\n",
+       "3      0\n",
+       "4      0\n",
+       "5      0\n",
+       "6      0\n",
+       "7      0\n",
+       "8      0\n",
+       "9      0\n",
+       "10     0\n",
+       "11     0\n",
+       "12     0\n",
+       "13     0\n",
+       "14     0\n",
+       "15     0\n",
+       "16     0\n",
+       "17     0\n",
+       "18     0\n",
+       "19     0\n",
+       "20     0\n",
+       "21     1\n",
+       "22     0\n",
+       "23     0\n",
+       "24     0\n",
+       "25     0\n",
+       "26     0\n",
+       "27     0\n",
+       "28     0\n",
+       "29     0\n",
+       "      ..\n",
+       "150    0\n",
+       "151    0\n",
+       "152    0\n",
+       "153    0\n",
+       "154    0\n",
+       "155    0\n",
+       "156    0\n",
+       "157    0\n",
+       "158    0\n",
+       "159    0\n",
+       "160    0\n",
+       "161    0\n",
+       "162    0\n",
+       "163    0\n",
+       "164    0\n",
+       "165    0\n",
+       "166    0\n",
+       "167    0\n",
+       "168    0\n",
+       "169    0\n",
+       "170    0\n",
+       "171    0\n",
+       "172    0\n",
+       "173    0\n",
+       "174    0\n",
+       "175    0\n",
+       "176    0\n",
+       "177    0\n",
+       "178    0\n",
+       "179    0\n",
+       "Length: 180, dtype: int64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "confounds_motion_all.columns"
+    "spikes"
    ]
   },
   {
@@ -281,14 +358,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Compute some more columns for the confounds df\n",
-    "from scipy.stats import iqr\n",
-    "from numpy import percentile\n",
-    "#from https://fsl.fmrib.ox.ac.uk/fsl/fslwiki/FSLMotionOutliers:\n",
-    "#--thresh=<val>       specify absolute threshold value (otherwise use box-plot cutoff = P75 + 1.5*IQR)\n",
-    "outlier_boundry = percentile(confounds_all.loc[1:, 'dvars'], q = [75]) + 1.5*iqr(confounds_all.loc[1:, 'dvars'])\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
