--- a/post_processing/motion_processing.ipynb
+++ b/post_processing/motion_processing.ipynb
@@ -147,14 +147,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
     "use_derivs = True\n",
     "use_quads = False\n",
     "dvar_reg = True\n",
-    "displace_reg = True"
+    "displace_reg = True\n",
+    "displace_thresh = 0.5 #mm"
    ]
   },
   {
@@ -200,88 +201,89 @@
     "if dvar_reg == True:\n",
     "    dvar_outlier_boundry = percentile(confounds_spikereg.loc[1:, 'dvars'], q = [75]) + 1.5*iqr(confounds_spikereg.loc[1:, 'dvars'])\n",
     "    spikes = spikes + confounds_spikereg['dvars'].apply(lambda dvar: 1 if dvar > dvar_outlier_boundry else 0)\n",
-    "    "
+    "if displace_reg == True:\n",
+    "    spikes = spikes + confounds_spikereg['framewise_displacement'].apply(lambda fwdisp: 1 if fwdisp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0      0\n",
-       "1      0\n",
-       "2      0\n",
-       "3      0\n",
-       "4      0\n",
-       "5      0\n",
-       "6      0\n",
-       "7      0\n",
-       "8      0\n",
-       "9      0\n",
-       "10     0\n",
-       "11     0\n",
-       "12     0\n",
-       "13     0\n",
-       "14     0\n",
-       "15     0\n",
-       "16     0\n",
-       "17     0\n",
-       "18     0\n",
-       "19     0\n",
-       "20     0\n",
-       "21     1\n",
-       "22     0\n",
-       "23     0\n",
-       "24     0\n",
-       "25     0\n",
-       "26     0\n",
-       "27     0\n",
-       "28     0\n",
-       "29     0\n",
-       "      ..\n",
-       "150    0\n",
-       "151    0\n",
-       "152    0\n",
-       "153    0\n",
-       "154    0\n",
-       "155    0\n",
-       "156    0\n",
-       "157    0\n",
-       "158    0\n",
-       "159    0\n",
-       "160    0\n",
-       "161    0\n",
-       "162    0\n",
-       "163    0\n",
-       "164    0\n",
-       "165    0\n",
-       "166    0\n",
-       "167    0\n",
-       "168    0\n",
-       "169    0\n",
-       "170    0\n",
-       "171    0\n",
-       "172    0\n",
-       "173    0\n",
-       "174    0\n",
-       "175    0\n",
-       "176    0\n",
-       "177    0\n",
-       "178    0\n",
-       "179    0\n",
-       "Length: 180, dtype: int64"
+       "0           NaN\n",
+       "1      0.047158\n",
+       "2      0.083707\n",
+       "3      0.091054\n",
+       "4      0.033170\n",
+       "5      0.082345\n",
+       "6      0.117443\n",
+       "7      0.032701\n",
+       "8      0.071806\n",
+       "9      0.105598\n",
+       "10     0.057813\n",
+       "11     0.079149\n",
+       "12     0.070706\n",
+       "13     0.053707\n",
+       "14     0.040751\n",
+       "15     0.049234\n",
+       "16     0.063153\n",
+       "17     0.032758\n",
+       "18     0.035318\n",
+       "19     0.031439\n",
+       "20     0.064835\n",
+       "21     0.084635\n",
+       "22     0.076513\n",
+       "23     0.072849\n",
+       "24     0.063467\n",
+       "25     0.058228\n",
+       "26     0.058031\n",
+       "27     0.070637\n",
+       "28     0.062587\n",
+       "29     0.071848\n",
+       "         ...   \n",
+       "150    0.111590\n",
+       "151    0.122869\n",
+       "152    0.065656\n",
+       "153    0.044102\n",
+       "154    0.045482\n",
+       "155    0.055403\n",
+       "156    0.042024\n",
+       "157    0.045876\n",
+       "158    0.055785\n",
+       "159    0.062360\n",
+       "160    0.077040\n",
+       "161    0.025672\n",
+       "162    0.080140\n",
+       "163    0.076589\n",
+       "164    0.100783\n",
+       "165    0.086134\n",
+       "166    0.067842\n",
+       "167    0.075207\n",
+       "168    0.103547\n",
+       "169    0.050799\n",
+       "170    0.047146\n",
+       "171    0.070067\n",
+       "172    0.097575\n",
+       "173    0.041514\n",
+       "174    0.045772\n",
+       "175    0.045791\n",
+       "176    0.055451\n",
+       "177    0.058901\n",
+       "178    0.039763\n",
+       "179    0.059666\n",
+       "Name: framewise_displacement, Length: 180, dtype: float64"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "spikes"
+    "confounds_spikereg.framewise_displacement"
    ]
   },
   {
