--- a/connectivity/test_extraction_script.ipynb
+++ b/connectivity/test_extraction_script.ipynb
@@ -141,6 +141,26 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "39.9"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "35/50*3420/60"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -153,9 +173,9 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=4)]: Done   5 out of  10 | elapsed:   16.9s remaining:   16.9s\n",
-      "[Parallel(n_jobs=4)]: Done   7 out of  10 | elapsed:   16.9s remaining:    7.2s\n",
-      "[Parallel(n_jobs=4)]: Done  10 out of  10 | elapsed:  2.0min finished\n"
+      "[Parallel(n_jobs=4)]: Done   5 out of  10 | elapsed:  1.8min remaining:  1.8min\n",
+      "[Parallel(n_jobs=4)]: Done   7 out of  10 | elapsed:  1.8min remaining:   47.5s\n",
+      "[Parallel(n_jobs=4)]: Done  10 out of  10 | elapsed:  1.9min finished\n"
      ]
     }
    ],
