error handling, ftw

--- a/connectivity/test_extraction_script.ipynb
+++ b/connectivity/test_extraction_script.ipynb
@@ -137,22 +137,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "39.9"
+       "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "35/50*3420/60"
+    "not ([] and False)"
    ]
   },
   {
