--- a/connectivity/test_extraction_script.ipynb
+++ b/connectivity/test_extraction_script.ipynb
@@ -522,9 +522,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:my_root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-my_root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -536,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
