--- a/connectivity/example_parcellation_extractions.ipynb
+++ b/connectivity/example_parcellation_extractions.ipynb
@@ -642,6 +642,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['a', 'b'], dtype='<U1')"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(['a', 'b'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 100,
    "metadata": {},
    "outputs": [
